--- a/style.css
+++ b/style.css
@@ -25,6 +25,35 @@
     margin: 0 0 36px 0;
   }
 
+  div.Texts {
+    width: 400px;
+    position: relative;
+    padding-bottom: 400px;
+    margin: 0 auto;
+    transition: width 500ms ease-in-out;
+  }
+
+  div.Texts__content {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: flex-start;
+  }
+
+  div.Text {
+    font-weight: 500;
+    font-size: 1.3em;
+    text-align: right;
+    margin-right: 0px;
+    line-height: 130%;
+    padding-bottom: 40px;
+  }
+
+  div.Text:last-child {
+    text-align: left;
+    margin-left: 60px;
+  }
+
   div.circle-container {
     display: flex;
     justify-content: center;
@@ -37,10 +66,15 @@
     height: 400px;
 
     position: absolute;
+    float: right;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     border-radius: 50%;
     z-index: 1;
+
+    shape-outside: circle(50% at 100% 50%) padding-box;
+    transition: width 500ms ease-in-out, height 500ms ease-in-out;
+  
 
   }
